WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271499
Select element Interaction Regions don't align with other inputs in including their padding
https://bugs.webkit.org/show_bug.cgi?id=271499
Summary
Select element Interaction Regions don't align with other inputs in including...
Yoel Hawa
Reported
2024-03-22 16:45:40 PDT
Select element Interaction Regions don't align with other inputs in including their padding
Attachments
Add attachment
proposed patch, testcase, etc.
Yoel Hawa
Comment 1
2024-03-22 17:26:45 PDT
<
rdar://problem/114213996
>
Yoel Hawa
Comment 2
2024-03-22 17:33:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26356
Yoel Hawa
Comment 3
2024-04-01 17:02:38 PDT
Pull request:
https://github.com/yoelhawa/WebKit/pull/1
EWS
Comment 4
2024-04-11 09:30:44 PDT
Committed
277387@main
(fea08da84e65): <
https://commits.webkit.org/277387@main
> Reviewed commits have been landed. Closing PR #26356 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug