Select element Interaction Regions don't align with other inputs in including their padding https://bugs.webkit.org/show_bug.cgi?id=271499 <rdar://114213996>

Reviewed by Tim Horton.

During the EventRegion paint phase, ignore control clipping to ensure
that Interaction Regions are properly sized.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::pushContentsClip):
Set `isControlClip` to false if we are in the EventRegion paint phase.

* LayoutTests/interaction-region/select-element-expected.txt: Added.
* LayoutTests/interaction-region/select-element.html: Added.
Add a test to cover `<select>` elements' Interaction Regions.
* LayoutTests/interaction-region/text-controls-expected.txt:
* LayoutTests/interaction-region/text-controls.html:
* LayoutTests/interaction-region/text-input-expected.txt:
* LayoutTests/interaction-region/text-input.html:
* LayoutTests/interaction-region/button-in-link.html:
* LayoutTests/interaction-region/button-in-link-expected.txt:
Add test cases with increased borders and overflows to cover this change.
* LayoutTests/interaction-region/input-type-file-region-expected.txt:
Update test expectations to include 1px border on file inputs.
* LayoutTests/platform/ios/editing/editable-region/overflow-scroll-text-field-and-contenteditable-expected.txt:
* LayoutTests/platform/ios/editing/editable-region/search-field-basic-expected.txt:
* LayoutTests/platform/ios/editing/editable-region/text-field-basic-expected.txt:
* LayoutTests/platform/ios/editing/editable-region/text-field-inside-composited-negative-z-index-layer-expected.txt:
Re-baseline iOS Event Region tests.

Canonical link: https://commits.webkit.org/277387@main